--- a/assets/css/Styles.css
+++ b/assets/css/Styles.css
@@ -56,7 +56,7 @@ body {
 .main-content {
   flex: 1;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 30px;
